--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 							<header>
 								<h1>Olá! Eu sou a <strong>Carol Yumi</strong>.</h1>
 							</header>
-							<p>Falar sobre mim aqui</p>
+							<p>Engenheira civil pela UFSCar, mestranda em Engenharia de Transportes pela USP.<br>
+                            Pesquisadora há mais de 3 anos. Apaixonada por estudar e aprender coisas novas.<br>
+                            Cientista de dados em formação.</p>
 						</div>
 					</div>
 				</div>
@@ -43,7 +45,7 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Seja bem-vindo ao meu <strong>portfólio</strong> de projetos.</h2>
+						<h2>Seja bem-vindo ao meu portfólio de projetos.</h2>
 						<p>Esses são alguns projetos nos quais tenho trabalhado.</p>
 					</header>
 					<div class="row">
@@ -90,29 +92,19 @@
 							</article>
 						</div>
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Entre em contato comigo</a>
-					</footer>
 				</div>
 			</article>
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
-					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
-					</header>
 					<div class="row">
 						<div class="col-12">
-							<hr />
-							<h3>Find me on ...</h3>
+							<h3>Me siga nas redes sociais</h3>
 							<ul class="social">
 								<li><a href="https://www.linkedin.com/in/carolyumi/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/carolysg" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							</ul>
-							<hr />
 						</div>
 					</div>
 					<footer>
