Alteração sobre mim

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<header>
 								<h1>Olá! Eu sou a <strong>Carol Yumi</strong>.</h1>
 							</header>
-							<p>Engenheira civil pela UFSCar, mestranda em Engenharia de Transportes pela USP.<br>
+							<p>Engenheira civil pela UFSCar, mestranda em Engenharia de Transportes pela USP.
                             Pesquisadora há mais de 3 anos. Apaixonada por estudar e aprender coisas novas.<br>
                             Cientista de dados em formação.</p>
 						</div>
