--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/carolysg/app-musica" class="image featured"><img src="images/projeto01.png" alt="" /></a>
+								<h3><a href="https://github.com/carolysg/app-musica">Aplicativo de música</a></h3>
+								<p>Projeto final do módulo Lógica de Programação II da formação em Python e Dados da Ada Tech.</p>
 							</article>
 						</div>
 					</div>
