--- a/index.html
+++ b/index.html
@@ -51,37 +51,16 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
+								<h3><a href="https://github.com/carolysg/projeto-pinguins">Projeto Pinguins</a></h3>
+								<p>Análise das características de três espécies de pinguins. Fonte: Kaggle.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/PeterRibs/analiseInvestidores" class="image featured"><img src="images/projeto02.png" alt="" /></a>
+								<h3><a href="https://github.com/PeterRibs/analiseInvestidores">Análise de investidores</a></h3>
+								<p>Projeto final do módulo Técnicas de Programação I da formação em Python e Dados da Ada Tech.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -100,7 +79,7 @@
 				<div class="container medium">
 					<div class="row">
 						<div class="col-12">
-							<h3>Me siga nas redes sociais</h3>
+							<h3>Redes sociais</h3>
 							<ul class="social">
 								<li><a href="https://www.linkedin.com/in/carolyumi/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/carolysg" class="icon brands fa-github"><span class="label">Github</span></a></li>
