--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
-								<h3><a href="https://github.com/carolysg/projeto-pinguins">Projeto Pinguins</a></h3>
+								<h3><a href="https://github.com/carolysg/projeto-pinguins">Pinguins</a></h3>
 								<p>Projeto de análise das características de três espécies de pinguins. Fonte: Kaggle.</p>
 							</article>
 						</div>
