--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 								<h3><a href="https://github.com/carolysg/app-musica">Aplicativo de música</a></h3>
 								<p>Projeto final do módulo Lógica de Programação II da formação em Python e Dados da Ada Tech.</p>
 							</article>
+                        <div class="col-4 col-6-medium col-12-small">
+                            <article class="box style2">
+                                <a href="https://sites.google.com/view/carolinagoshima" class="image featured"><img src="images/projeto00.png" alt="" /></a>
+                                <h3><a href="https://sites.google.com/view/carolinagoshima">Portfólio de dashboards</a></h3>
+                                <p>Portfólio de projetos: dataviz e dashboards desenvolvidos em Excel e Power BI.</p>
+                            </article>
 						</div>
 					</div>
 				</div>
