--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul class="container">
 					<li><a href="#top">Sobre mim</a></li>
 					<li><a href="#portfolio">Projetos</a></li>
-					<li><a href="#contact">Contato</a></li>
+					<li><a href="#contact">Redes sociais</a></li>
 				</ul>
 			</nav>
 
