--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<ul class="container">
 					<li><a href="#top">Sobre mim</a></li>
 					<li><a href="#portfolio">Projetos</a></li>
+                    <li><a href="#work">Cursos</a></li>
 					<li><a href="#contact">Redes sociais</a></li>
 				</ul>
 			</nav>
@@ -80,6 +81,46 @@
 					</div>
 				</div>
 			</article>
+        
+		<!-- Work -->
+        <article id="work" class="wrapper style2">
+            <div class="container">
+                <header>
+                    <h2>Cursos</h2>
+                    <p>Cursos que já realizei e certificados que possuo.</p>
+                </header>
+                <div class="row">
+                    <div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/1dF4vfxyhuj1MhPPUnOrV3WdX8Xhvy7lB/view?usp=share_link" class="image featured"><img src="images/certificado04.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1dF4vfxyhuj1MhPPUnOrV3WdX8Xhvy7lB/view?usp=share_link">Simplifica Power Excel</a></h3>
+                            <p>Simplifica - Carga horária: 10h.</p>
+                        </article>
+                    </div>
+                    <div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link" class="image featured"><img src="images/projeto02.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link">Python para DS e Analytics</a></h3>
+                            <p>PA Analytics - Carga horária: 30h.</p>
+                        </article>
+                    </div>
+                    <div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/1XajFQbL1YAZT_sXv329k5jz2E2GbEXny/view?usp=share_link" class="image featured"><img src="images/certificado02.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1XajFQbL1YAZT_sXv329k5jz2E2GbEXny/view?usp=share_link">Metodologias Ágeis</a></h3>
+                            <p>Escola Conquer - Carga horária: 12h.</p>
+                        </article>
+                    </div>    
+                    <div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/1HU1MqqDhAonGYVCGZzpWRsp3ZRpuAUYU/view?usp=share_link" class="image featured"><img src="images/certificado01.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1HU1MqqDhAonGYVCGZzpWRsp3ZRpuAUYU/view?usp=share_link">Introdução ao Python</a></h3>
+                            <p>Alfahelix - Carga horária: 2h.</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </article>        
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
