--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
                 <div class="row">
                     <div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
+                            <a href="https://drive.google.com/file/d/1U3ZorsFbvFRN20rA-K01l_5ot85moLtK/view?usp=share_link" class="image featured"><img src="images/certificado06.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1U3ZorsFbvFRN20rA-K01l_5ot85moLtK/view?usp=share_link">Coding Tank</a></h3>
+                            <p>Ada Tech - Carga horária: 36h.</p>
+                        </article>
+                    </div>
+                    <div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/1GQCJ-9Ww5BQ4SsSvpZdBqCPaHPOM61V-/view?usp=share_link" class="image featured"><img src="images/certificado05.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1GQCJ-9Ww5BQ4SsSvpZdBqCPaHPOM61V-/view?usp=share_link">Excel Impressionador</a></h3>
+                            <p>Hashtag - Carga horária: 128h.</p>
+                        </article>
+                    </div>
+                    <div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
                             <a href="https://drive.google.com/file/d/1dF4vfxyhuj1MhPPUnOrV3WdX8Xhvy7lB/view?usp=share_link" class="image featured"><img src="images/certificado04.png" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/1dF4vfxyhuj1MhPPUnOrV3WdX8Xhvy7lB/view?usp=share_link">Simplifica Power Excel</a></h3>
                             <p>Simplifica - Carga horária: 10h.</p>
@@ -99,8 +113,8 @@
                     </div>
                     <div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link" class="image featured"><img src="images/projeto02.png" alt="" /></a>
-                            <h3><a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link">Python para DS e Analytics</a></h3>
+                            <a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link" class="image featured"><img src="images/certificado03.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link">Python para Data Science</a></h3>
                             <p>PA Analytics - Carga horária: 30h.</p>
                         </article>
                     </div>
