--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul class="container">
 					<li><a href="#top">Sobre mim</a></li>
 					<li><a href="#portfolio">Projetos</a></li>
-                    <li><a href="#work">Cursos</a></li>
+                    <li><a href="#work">Certificados</a></li>
 					<li><a href="#contact">Redes sociais</a></li>
 				</ul>
 			</nav>
@@ -86,7 +86,7 @@
         <article id="work" class="wrapper style2">
             <div class="container">
                 <header>
-                    <h2>Cursos</h2>
+                    <h2>Certificados</h2>
                     <p>Cursos que já realizei e certificados que possuo.</p>
                 </header>
                 <div class="row">
