--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/PeterRibs/analiseInvestidores" class="image featured"><img src="images/projeto02.png" alt="" /></a>
-								<h3><a href="https://github.com/PeterRibs/analiseInvestidores">Análise de investidores</a></h3>
+								<h3><a href="https://github.com/PeterRibs/analiseInvestidores">Investidores</a></h3>
 								<p>Projeto final do módulo Técnicas de Programação I da formação em Python e Dados da Ada Tech.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/carolysg/app-musica" class="image featured"><img src="images/projeto01.png" alt="" /></a>
-								<h3><a href="https://github.com/carolysg/app-musica">Aplicativo de música</a></h3>
+								<h3><a href="https://github.com/carolysg/app-musica">App de música</a></h3>
 								<p>Projeto final do módulo Lógica de Programação II da formação em Python e Dados da Ada Tech.</p>
 							</article>
                         </div>    
