--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Seja bem-vindo ao meu portfólio de projetos.</h2>
+						<h2>Seja bem-vindo ao meu portfólio de projetos</h2>
 						<p>Esses são alguns projetos nos quais tenho trabalhado.</p>
 					</header>
 					<div class="row">
@@ -49,7 +49,7 @@
 							<article class="box style2">
 								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/projeto-pinguins">Pinguins</a></h3>
-								<p>Projeto de análise de dataset com características de três espécies de pinguins. Fonte: Kaggle.</p>
+								<p>Fonte: Kaggle.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
