Atualizando descrição de projeto

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="box style2">
 								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/projeto-pinguins">Pinguins</a></h3>
-								<p>Fonte: Kaggle.</p>
+								<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
