Alteração de tamanho de fonte

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
                             <a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link" class="image featured"><img src="images/certificado03.png" alt="" /></a>
-                            <h3><a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link">Python p/ Data Science</a></h3>
+                            <h3><a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link">Python para Data Science e Analytics</a></h3>
                             <p>PA Analytics - Carga horária: 30h.</p>
                         </article>
                     </div>
