Teste de fontes

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/projeto-pinguins">Pinguins</a></h3>
 								<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
+								<p class="small-font">Python (Pandas, Numpy, Seaborn, Matplotlib, Sklearn, Torch)</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
