--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 								<a href="https://github.com/PeterRibs/analiseInvestidores" class="image featured"><img src="images/projeto02.png" alt="" /></a>
 								<h3><a href="https://github.com/PeterRibs/analiseInvestidores">Investidores</a></h3>
 								<p>Projeto final do módulo Técnicas de Programação I da formação em Python e Dados da Ada Tech.</p>
+								<p class="small-font">Python (Pandas, Numpy)</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -65,13 +66,15 @@
 								<a href="https://github.com/carolysg/app-musica" class="image featured"><img src="images/projeto01.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/app-musica">App de música</a></h3>
 								<p>Projeto final do módulo Lógica de Programação II da formação em Python e Dados da Ada Tech.</p>
+								<p class="small-font">Python</p>
 							</article>
                         </div>    
                         <div class="col-4 col-6-medium col-12-small">
                             <article class="box style2">
                                 <a href="https://sites.google.com/view/carolinagoshima" class="image featured"><img src="images/projeto00.png" alt="" /></a>
                                 <h3><a href="https://sites.google.com/view/carolinagoshima">Portfólio de dashboards</a></h3>
-                                <p>Portfólio de projetos: dataviz e dashboards desenvolvidos em Excel e Power BI.</p>
+                                <p>Portfólio de projetos: dataviz e dashboards.</p>
+								<p class="small-font">Excel, Power BI</p>
                             </article>
 						</div>
 					</div>
