--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                         </div>    
                         <div class="col-4 col-6-medium col-12-small">
                             <article class="box style2">
+                                <a href="https://github.com/carolysg/resumos-estudos" class="image featured"><img src="images/projeto00.1.png" alt="" /></a>
+                                <h3><a href="https://github.com/carolysg/resumos-estudos">Resumos de estudos</a></h3>
+                                <p>Resumos de conteúdos que tenho estudado (em constante atualização).</p>
+								<p class="small-font">Github</p>
+                            </article>
+						</div>
+                        <div class="col-4 col-6-medium col-12-small">
+                            <article class="box style2">
                                 <a href="https://sites.google.com/view/carolinagoshima" class="image featured"><img src="images/projeto00.png" alt="" /></a>
                                 <h3><a href="https://sites.google.com/view/carolinagoshima">Portfólio de dashboards</a></h3>
                                 <p>Portfólio de projetos: dataviz e dashboards.</p>
