--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<a href="https://github.com/carolysg/california-traffic-collision" class="image featured"><img src="images/projeto04.png" alt="" /></a>
+								<h3><a href="https://github.com/carolysg/california-traffic-collision">California Traffic Collision</a></h3>
+								<p>Análise de dados de colisão de tráfego na Califórnia (em andamento). Fonte: Kaggle.</p>
+								<p class="small-font">Python, SQL (SQLite)</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/projeto-pinguins">Pinguins</a></h3>
 								<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
@@ -81,7 +89,7 @@
                             <article class="box style2">
                                 <a href="https://sites.google.com/view/carolinagoshima" class="image featured"><img src="images/projeto00.png" alt="" /></a>
                                 <h3><a href="https://sites.google.com/view/carolinagoshima">Portfólio de dashboards</a></h3>
-                                <p>Portfólio de projetos: dataviz e dashboards.</p>
+                                <p>Portfólio de projetos: dataviz e dashboards (em constante atualização).</p>
 								<p class="small-font">Excel, Power BI</p>
                             </article>
 						</div>
