--- a/index.html
+++ b/index.html
@@ -47,14 +47,6 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/carolysg/california-traffic-collision" class="image featured"><img src="images/projeto04.png" alt="" /></a>
-								<h3><a href="https://github.com/carolysg/california-traffic-collision">California Traffic Collision</a></h3>
-								<p>Análise de dados de colisão de tráfego na Califórnia (em andamento). Fonte: Kaggle.</p>
-								<p class="small-font">Python, SQL (SQLite)</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
 								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/projeto-pinguins">Pinguins</a></h3>
 								<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
@@ -67,6 +59,14 @@
 								<h3><a href="https://github.com/PeterRibs/analiseInvestidores">Investidores</a></h3>
 								<p>Projeto final do módulo Técnicas de Programação I da formação em Python e Dados da Ada Tech.</p>
 								<p class="small-font">Python (Pandas, Numpy)</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://github.com/carolysg/steam_games" class="image featured"><img src="images/projeto01.2.png" alt="" /></a>
+								<h3><a href="https://github.com/carolysg/steam_games">Jogos da Steam</a></h3>
+								<p>Projeto final do módulo Banco de Dados I da formação em Python e Dados da Ada Tech.</p>
+								<p class="small-font">Python (Pandas, Psycopg2), SQL (PostgreSQL)</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
