--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <a href="https://github.com/carolysg/resumos-estudos" class="image featured"><img src="images/projeto00.1.png" alt="" /></a>
                                 <h3><a href="https://github.com/carolysg/resumos-estudos">Resumos de estudos</a></h3>
                                 <p>Resumos de conteúdos que tenho estudado (em constante atualização).</p>
-								<p class="small-font">Github</p>
+								<p class="small-font">Github, Python</p>
                             </article>
 						</div>
                         <div class="col-4 col-6-medium col-12-small">
