--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<a href="https://github.com/carolysg/automatizacao-demo-site" class="image featured"><img src="images/projeto04.png" alt="" /></a>
+								<h3><a href="https://github.com/carolysg/automatizacao-demo-site">Automation Demo Site</a></h3>
+								<p>Preenchimento automático de formulário utilizando Selenium. Site do formulário: Automation Demo Site. Em andamento.</p>
+								<p class="small-font">Python (Selenium)</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/projeto-pinguins">Pinguins</a></h3>
 								<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
