--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="box style2">
 								<a href="https://github.com/carolysg/automatizacao-demo-site" class="image featured"><img src="images/projeto04.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/automatizacao-demo-site">Automation Demo Site</a></h3>
-								<p>Preenchimento automático de formulário utilizando Selenium. Site do formulário: Automation Demo Site. Em andamento.</p>
+								<p>Preenchimento automático de formulário utilizando Selenium. Em andamento.</p>
 								<p class="small-font">Python (Selenium)</p>
 							</article>
 						</div>
