--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/carolysg/automatizacao-demo-site" class="image featured"><img src="images/projeto04.png" alt="" /></a>
-								<h3><a href="https://github.com/carolysg/automatizacao-demo-site">Automation Demo Site</a></h3>
-								<p>Preenchimento automatizado de formulário utilizando Selenium (em andamento).</p>
+								<a href="https://github.com/carolysg/auto-forms-selenium" class="image featured"><img src="images/projeto04.png" alt="" /></a>
+								<h3><a href="https://github.com/carolysg/auto-forms-selenium">Automatização - Selenium</a></h3>
+								<p>Preenchimento automatizado de formulários online utilizando Selenium (em andamento).</p>
 								<p class="small-font">Python (Selenium)</p>
 							</article>
 						</div>
