--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://github.com/carolysg/auto-forms-selenium" class="image featured"><img src="images/projeto04.png" alt="" /></a>
-								<h3><a href="https://github.com/carolysg/auto-forms-selenium">Automatização - Selenium</a></h3>
-								<p>Preenchimento automatizado de formulários online utilizando Selenium (em andamento).</p>
+								<h3><a href="https://github.com/carolysg/auto-forms-selenium">Automação Web - Selenium</a></h3>
+								<p>Preenchimento automático de formulários online utilizando Selenium (em andamento).</p>
 								<p class="small-font">Python (Selenium)</p>
 							</article>
 						</div>
