--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 						</div>
                         <div class="col-4 col-6-medium col-12-small">
                             <article class="box style2">
-                                <a href="teste.html" class="image featured"><img src="images/projeto00.png" alt="" /></a>
-                                <h3><a href="teste.html">Portfólio de dashboards</a></h3>
+                                <a href="https://sites.google.com/view/carolinagoshima" class="image featured"><img src="images/projeto00.png" alt="" /></a>
+                                <h3><a href="https://sites.google.com/view/carolinagoshima">Portfólio de dashboards</a></h3>
                                 <p>Portfólio de projetos: dataviz e dashboards (em constante atualização).</p>
 								<p class="small-font">Excel, Power BI</p>
                             </article>
