--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -20,7 +20,8 @@ HEADER
 			<div class="row justify-content-between">
 				<div class="col-md-6 pt-6 pb-6 pr-6 align-self-center">
 					<h1 class="display-4 secondfont mb-3 font-weight-bold">Análise das características de três espécies de pinguins</h1>
-					<a small href="https://www.kaggle.com/datasets/larsen0966/penguins" target="_blank">Link do dataset</a>
+					<a small href="https://www.kaggle.com/datasets/larsen0966/penguins" target="_blank">Link do dataset</a> <br>
+					<a small href="https://github.com/carolysg/projeto-pinguins/tree/main" target="_blank">Link do repositório do Github</a>
 				</div>
 				<div class="col-md-6 pr-0">
 					<img src="images/projeto03.png">
@@ -67,14 +68,8 @@ MAIN
 			</div>
 			<br>
 			<p>
-				 Teste
-				 <div class="notebook">
-					  <code>
-						function exemploooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo() { <br>
-						  console.log("Este é um exemplo de código");
-						}
-					  </code>
-				</div>
+				O primeiro passo foi importar as bibliotecas necessárias, abrir o arquivo CSV e verificar como estavam os dados.
+				<img src="images\projetos\03_01.png">
 			</p>
 			<p>
 				 Freemium non-disclosure agreement lean startup bootstrapping holy grail ramen MVP iteration accelerator. Strategy market ramen leverage paradigm shift seed round entrepreneur crowdfunding social proof angel investor partner network virality.
