--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -86,10 +86,13 @@ MAIN
 			</div>
 			<br>
 			<p>
-				O primeiro passo foi verificar as medidas descritivas das variáveis numéricas:
+				O primeiro passo foi verificar as medidas descritivas das variáveis numéricas. Os valores da média e da mediana de todas as variáveis são relativamente próximos, indicando possivelmente distribuições simétricas.
 			</p>
 			<img src="images\projetos\03_02.png">
-			
+			<p>
+				A partir daí, algumas análises de proporção foram realizadas. A primeira delas foi a divisão de pinguins por espécies, por ilha e por sexo.
+			</p>
+			<img src="images\projetos\03_03.png">
 		</article>
 	</div>
 </div>
