--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -90,9 +90,35 @@ MAIN
 			</p>
 			<img src="images\projetos\03_02.png">
 			<p>
-				A partir daí, algumas análises de proporção foram realizadas. A primeira delas foi a divisão de pinguins por espécies, por ilha e por sexo.
+				A partir daí, algumas análises de proporção foram realizadas. A primeira delas foi a divisão de pinguins por espécies, por ilha e por sexo. Algumas considerações e questionamentos foram levantados a partir da análise dos gráficos:
 			</p>
 			<img src="images\projetos\03_03.png">
+			<p>
+				<ul>
+					<li>A maior parte dos pinguins é da espécie Adelie (44%)</li>
+					<li>A maior parte dos pinguins se encontra na ilha Biscoe (49%)</li>
+					<li>Os pinguins estão igualmente divididos entre machos e fêmeas</li>
+					<li>As proporções de espécies são semelhantes às proporções de quantidade de pinguins nas ilhas</li>
+					<li>Qual será a proporção de espécies em cada ilha?</li>
+					<li>Qual será a proporção de machos e fêmeas por espécie? E por ilha?</li>
+					<li>Quais as proporções por ano?</li>
+				</ul>
+			</p>
+			<p>
+				Para responder os questionamentos levantados, outros gráficos foram elaborados:
+			</p>
+			<img src="images\projetos\03_04.png">
+			<p>
+				<ul>
+					<li>A maior parte dos pinguins é da espécie Adelie (44%)</li>
+					<li>A maior parte dos pinguins se encontra na ilha Biscoe (49%)</li>
+					<li>Os pinguins estão igualmente divididos entre machos e fêmeas</li>
+					<li>As proporções de espécies são semelhantes às proporções de quantidade de pinguins nas ilhas</li>
+					<li>Qual será a proporção de espécies em cada ilha?</li>
+					<li>Qual será a proporção de machos e fêmeas por espécie? E por ilha?</li>
+					<li>Quais as proporções por ano?</li>
+				</ul>
+			</p>			
 		</article>
 	</div>
 </div>
