--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -110,15 +110,19 @@ MAIN
 			<img src="images\projetos\03_04.png">
 			<p>
 				<ul>
-					<li>A maior parte dos pinguins é da espécie Adelie (44%)</li>
-					<li>A maior parte dos pinguins se encontra na ilha Biscoe (49%)</li>
-					<li>Os pinguins estão igualmente divididos entre machos e fêmeas</li>
-					<li>As proporções de espécies são semelhantes às proporções de quantidade de pinguins nas ilhas</li>
-					<li>Qual será a proporção de espécies em cada ilha?</li>
-					<li>Qual será a proporção de machos e fêmeas por espécie? E por ilha?</li>
-					<li>Quais as proporções por ano?</li>
+					<li>A ilha Torgersen é habitada apenas pelos pinguins Adelie</li>
+					<li>Os pinguins Adelie habitam as três ilhas</li>
+					<li>Os pinguins Gentoo habitam apenas a ilha Biscoe e compõem 74% dos pinguins da ilha</li>
+					<li>Os pinguins Chinstrap habitam apenas a ilha Dream e compõem 55% dos pinguins da ilha</li>
 				</ul>
-			</p>			
+			</p>
+			<img src="images\projetos\03_05.png">
+			<p>
+				<ul>
+					<li>A ilha Torgersen, que é habitada apenas pelos pinguins Adelie, possui maior parte de pinguins fêmeas (54%)</li>
+					<li>As ilhas Biscoe e Dream, apesar de serem habitadas por duas espécies diferentes de pinguins, possuem proporção (praticamente) igual de machos e fêmeas</li>
+				</ul>
+			</p>		
 		</article>
 	</div>
 </div>
