--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -122,7 +122,14 @@ MAIN
 					<li>A ilha Torgersen, que é habitada apenas pelos pinguins Adelie, possui maior parte de pinguins fêmeas (54%)</li>
 					<li>As ilhas Biscoe e Dream, apesar de serem habitadas por duas espécies diferentes de pinguins, possuem proporção (praticamente) igual de machos e fêmeas</li>
 				</ul>
-			</p>		
+			</p>
+			<img src="images\projetos\03_06.png">
+			<p>
+				<ul>
+					<li>Todas as espécies apresentam praticamente a mesma quantidade de machos e fêmeas</li>
+				</ul>
+			</p>
+			
 		</article>
 	</div>
 </div>
