Análises por ano

--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -119,7 +119,7 @@ MAIN
 			<img src="images\projetos\03_05.png">
 			<p>
 				<ul>
-					<li>A ilha Torgersen, que é habitada apenas pelos pinguins Adelie, possui maior parte de pinguins fêmeas (54%)</li>
+					<li>A ilha Torgersen, que é habitada apenas pelos pinguins Adelie, possui maior parte de pinguins fêmeas (52%)</li>
 					<li>As ilhas Biscoe e Dream, apesar de serem habitadas por duas espécies diferentes de pinguins, possuem proporção (praticamente) igual de machos e fêmeas</li>
 				</ul>
 			</p>
@@ -129,7 +129,25 @@ MAIN
 					<li>Todas as espécies apresentam praticamente a mesma quantidade de machos e fêmeas</li>
 				</ul>
 			</p>
-			
+			<p>
+				Também foram realizadas algumas análises por ano:
+			</p>
+			<p>
+				<ul>
+					Ilha Biscoe:
+					<li>De 2007 para 2008 houve um aumento no número de registros de pinguins das duas espécies</li>
+					<li>De 2008 para 2009 os registros diminuíram, mas ainda se mantiveram acima dos números de 2007</li>
+					Ilha Dream:
+					<li>Ao contrário da ilha Biscoe, os números das duas espécies diminuíram de 2007 para 2008</li>
+					<li>De 2008 para 2009 houve um aumento, com os valores retornando próximos aos de 2007</li>
+					Ilha Torgersen:
+					<li>De 2007 para 2008 o número de registros de pinguins Adelie diminuiu</li>
+					<li>Esse número se manteve o mesmo nos anos de 2008 e 2009</li>
+				</ul>
+			</p>
+			<p>
+				
+			</p>
 		</article>
 	</div>
 </div>
