--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -146,8 +146,10 @@ MAIN
 				</ul>
 			</p>
 			<p>
-				
+				Ainda, foram avaliadas as características de cada uma das espécies por meio de boxplots:
 			</p>
+			<img src="images\projetos\03_07.png">
+			
 		</article>
 	</div>
 </div>
