--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -149,7 +149,17 @@ MAIN
 				Ainda, foram avaliadas as características de cada uma das espécies por meio de boxplots:
 			</p>
 			<img src="images\projetos\03_07.png">
-			
+			<p>
+				<ul>
+					<li>A espécie Gentoo aparentemente é maior que as outras duas, com pinguins mais pesados e de nadadeiras maiores, com bicos compridos porém finos</li>
+					<li>As espécies Adelie e Chinstrap possuem peso corporal e altura do bico semelhantes, mas os Chinstrap possuem comprimentos de bico e nadadeira maiores</li>
+				</ul>
+			</p>
+			<p>
+				Algumas visualizações também foram elaboradas com o objetivo de entender a correlação entre as variáveis:
+			</p>
+			<img src="images\projetos\03_08.png">
+			<img src="images\projetos\03_09.png">
 		</article>
 	</div>
 </div>
