--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -160,6 +160,15 @@ MAIN
 			</p>
 			<img src="images\projetos\03_08.png">
 			<img src="images\projetos\03_09.png">
+			<p>
+				<ul>
+					<li>Grande parte das variáveis apresenta uma distribuição que se assemelha à distribuição normal, porém mais estreita</li>
+					<li>Aparentemente, considerando todas as espécies de pinguins, as variáveis de peso corporal e comprimento de nadadeira são as que possuem correlação mais alta</li>
+					<li>Todas as matrizes de correlação são diferentes, indicando que cada espécie de pinguim possui suas particularidades com relação às características analisadas</li>
+					<li>Considerando cada uma das espécies separadamente, a maior correlação ocorre entre o peso corporal e o comprimento da nadadeira na espécie Gentoo (0.72)</li>
+					<li>A maior correlação de todas ocorre entre o peso corporal e o comprimento da nadadeira quando consideramos todas as espécies (0.87)</li>
+				</ul>
+			</p>
 		</article>
 	</div>
 </div>
