--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -166,8 +166,15 @@ MAIN
 					<li>Aparentemente, considerando todas as espécies de pinguins, as variáveis de peso corporal e comprimento de nadadeira são as que possuem correlação mais alta</li>
 					<li>Todas as matrizes de correlação são diferentes, indicando que cada espécie de pinguim possui suas particularidades com relação às características analisadas</li>
 					<li>Considerando cada uma das espécies separadamente, a maior correlação ocorre entre o peso corporal e o comprimento da nadadeira na espécie Gentoo (0.72)</li>
-					<li>A maior correlação de todas ocorre entre o peso corporal e o comprimento da nadadeira quando consideramos todas as espécies (0.87)</li>
+					<li>A maior correlação de todas ocorre entre o peso corporal e o comprimento da nadadeira quando consideramos todas as espécies (0.87), ou seja, quanto maior o peso corporal do pinguim, maior tende a ser o comprimento de sua nadadeira</li>
 				</ul>
+			</p>
+			<div>
+				<h2>Redes neurais</h2>
+			</div>
+			<br>
+			<p>
+				
 			</p>
 		</article>
 	</div>
