página projeto pinguins

--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -174,7 +174,16 @@ MAIN
 			</div>
 			<br>
 			<p>
-				
+				Um modelo de redes neurais foi desenvolvido com o objetivo de classificar a espécie de pinguim de acordo com as características de comprimento e largura do bico, comprimento da nadadeira e massa corporal. Algumas das principais características e resultados do modelo:
+			</p>
+			<p>
+				<ul>
+					<li>A arquitetura da rede é composta por 3 layers, sendo um de entrada (tamanho 4), um intermediário (tamanho 10) e um de saída (tamanho 3)</li>
+					<li>Foi utilizada a função de ativação ReLU</li>
+					<li>Utilizou-se o critério de avaliação de perda de entropia cruzada e o algoritmo Adam para otimização</li>
+					<li>A base de dados foi dividida em 70% treino e 30% teste</li>
+					<li>O modelo atingiu uma acurácia de 95%</li>
+				</ul>
 			</p>
 		</article>
 	</div>
