--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/carolysg/projeto-pinguins" class="image featured"><img src="images/projeto03.png" alt="" /></a>
-								<h3><a href="https://github.com/carolysg/projeto-pinguins">Pinguins</a></h3>
+								<a href="projeto03_pinguins.html" class="image featured"><img src="images/projeto03.png" alt="" /></a>
+								<h3><a href="projeto03_pinguins.html">Pinguins</a></h3>
 								<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
 								<p class="small-font">Python (Pandas, Numpy, Seaborn, Matplotlib, Sklearn, Torch)</p>
 							</article>
