--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
                     <p>Cursos que já realizei e certificados que possuo.</p>
                 </header>
                 <div class="row">
+					<div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/1rWE6i_BvNr_cjhpcMOeggcM-quxqtY25/view?usp=sharing" class="image featured"><img src="images/certificado07.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1rWE6i_BvNr_cjhpcMOeggcM-quxqtY25/view?usp=sharing">Intro to SQL</a></h3>
+                            <p>Kaggle</p>
+                        </article>
+                    </div>
                     <div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
                             <a href="https://drive.google.com/file/d/1U3ZorsFbvFRN20rA-K01l_5ot85moLtK/view?usp=share_link" class="image featured"><img src="images/certificado06.png" alt="" /></a>
