--- a/projeto02_investidores.html
+++ b/projeto02_investidores.html
@@ -56,6 +56,7 @@ MAIN
                     <li>Lat_long : Dados geográficos do investidor</li>
                     <li>Job : Profissão do investidor ou do seu responsável (em inglês)</li>
                     <li>Estado : Estado onde o investidor reside</li>
+                    <br>
                     Investimento (características dos investimentos):
                     <li>id : Identificação do investidor</li>
                     <li>Salario : Renda do investidor ou seu responsável</li>
@@ -63,6 +64,7 @@ MAIN
                     <li>Ativo01, Ativo02, Ativo03, Ativo04, Ativo05, Ativo06, Ativo07 : O quanto de dinheiro o investidor colocou em cada ativo</li>
                     <li>Nota1, Nota2 : O quanto o investidor está satisfeito com nossa empresa (2 avaliações)</li>
 				</ul>
+                O projeto foi realizado em grupo (3 pessoas) e os membros podem ser observados no repositório do Github.
 			</p>
             <div>
 				<h2>Etapas iniciais</h2>
