--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							</header>
 							<p>Engenheira civil pela UFSCar, mestranda em Engenharia de Transportes pela USP.
                             Pesquisadora há mais de 3 anos. Apaixonada por estudar e aprender coisas novas.<br>
-                            Cientista de dados em formação.</p>
+                            Engenheira de dados júnior.</p>
 						</div>
 					</div>
 				</div>
