--- a/index.html
+++ b/index.html
@@ -112,6 +112,30 @@
                     <h2>Certificados</h2>
                     <p>Cursos que já realizei e certificados que possuo.</p>
                 </header>
+				<div class="row">
+					<div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/14e_tIARXiVrx8bDzssSaZo3dtCs6C595/view?usp=sharing" class="image featured"><img src="images/certificado10.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/14e_tIARXiVrx8bDzssSaZo3dtCs6C595/view?usp=sharing">Fundamentos da Engenharia de Dados</a></h3>
+                            <p>DSA - Carga horária: 24h.</p>
+                        </article>
+                    </div>
+				<div class="row">
+					<div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/1hfvvRAljAmy757d0Q13ueKk7pcCpU9oL/view?usp=sharing" class="image featured"><img src="images/certificado09.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1hfvvRAljAmy757d0Q13ueKk7pcCpU9oL/view?usp=sharing">Descubra a Nuvem AWS</a></h3>
+                            <p>DIO - Carga horária: 6h.</p>
+                        </article>
+                    </div>
+				<div class="row">
+					<div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/1pchYHEthxNLfwRShU4kUvGMZrbEr2k0h/view?usp=sharing" class="image featured"><img src="images/certificado08.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1pchYHEthxNLfwRShU4kUvGMZrbEr2k0h/view?usp=sharing">LM Tech Data Talents</a></h3>
+                            <p>Ada Tech - Carga horária: 324h.</p>
+                        </article>
+                    </div>
                 <div class="row">
 					<div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
