--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -19,7 +19,7 @@ HEADER
 		<div class="h-100 tofront">
 			<div class="row justify-content-between">
 				<div class="col-md-6 pt-6 pb-6 pr-6 align-self-center">
-					<h1 class="display-4 secondfont mb-3 font-weight-bold">Análise das características de três espécies de pinguins</h1>
+					<h1>Análise das características de três espécies de pinguins</h1>
 					<a small href="https://www.kaggle.com/datasets/larsen0966/penguins" target="_blank">Link do dataset</a> <br>
 					<a small href="https://github.com/carolysg/projeto-pinguins/tree/main" target="_blank">Link do repositório do Github</a>
 				</div>
