--- a/projeto02_investidores.html
+++ b/projeto02_investidores.html
@@ -19,7 +19,7 @@ HEADER
 		<div class="h-100 tofront">
 			<div class="row justify-content-between">
 				<div class="col-md-6 pt-6 pb-6 pr-6 align-self-center">
-					<h1 class="display-4 secondfont mb-3 font-weight-bold">Análise de dados fictícios de investidores</h1>
+					<h1>Análise de dados fictícios de investidores</h1>
 					<a small href="https://github.com/PeterRibs/analiseInvestidores" target="_blank">Link do repositório do Github</a>
 				</div>
 				<div class="col-md-6 pr-0">
