--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/PeterRibs/analiseInvestidores" class="image featured"><img src="images/projeto02.png" alt="" /></a>
-								<h3><a href="https://github.com/PeterRibs/analiseInvestidores">Investidores</a></h3>
+								<a href="projeto02_investidores.html" class="image featured"><img src="images/projeto02.png" alt="" /></a>
+								<h3><a href="projeto02_investidores.html">Investidores</a></h3>
 								<p>Projeto final do módulo Técnicas de Programação I da formação em Python e Dados da Ada Tech.</p>
 								<p class="small-font">Python (Pandas, Numpy)</p>
 							</article>
