--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<a href="https://github.com/carolysg/api-weather" class="image featured"><img src="images/projeto05.png" alt="" /></a>
+								<h3><a href="https://github.com/carolysg/api-weather">Coleta de dados - API HG Weather</a></h3>
+								<p>Coleta e processamento de dados do clima de São Carlos (em andamento).</p>
+								<p class="small-font">Python, API, GCP</p>
+							</article>
+						</div>
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="https://github.com/carolysg/auto-forms-selenium" class="image featured"><img src="images/projeto04.png" alt="" /></a>
 								<h3><a href="https://github.com/carolysg/auto-forms-selenium">Automação Web - Selenium</a></h3>
 								<p>Preenchimento automático de formulários online utilizando Selenium (em andamento).</p>
