--- a/projeto02_investidores.html
+++ b/projeto02_investidores.html
@@ -73,6 +73,19 @@ MAIN
 			<p>
                 O primeiro passo foi importar as bibliotecas necessárias, abrir os arquivos CSV e verificar como estavam os dados.
 			</p>
+			<p>Arquivo de cadastros:</p>
+			<img src="images\projetos\02_01.png">
+			<p>Arquivo de investimentos 1:</p>
+			<img src="images\projetos\02_02.png">
+			<p>Arquivo de investimentos 2:</p>
+			<img src="images\projetos\02_03.png">
+			<p>
+				As bases de investimentos foram concatenadas e as linhas duplicadas foram removidas, resultando em um dataframe com 38754 linhas e 12 colunas:
+			</p>
+			<img src="images\projetos\02_04.png">
+			<p>
+				
+			</p>
 		</article>
 	</div>
 </div>
