--- a/projeto02_investidores.html
+++ b/projeto02_investidores.html
@@ -84,8 +84,11 @@ MAIN
 			</p>
 			<img src="images\projetos\02_04.png">
 			<p>
-				
+				Depois, o dataframe de cadastro também foi concatenado ao dataframe de investimentos utilizando a chave "id". Dessa forma, as análises se tornam mais fáceis, limitadas a um único dataframe.
+				Antes de iniciar as análises de fato, verificou-se a quantidade de dados faltantes no dataframe.
 			</p>
+			<img src="images\projetos\02_05.png">
+			
 		</article>
 	</div>
 </div>
