manipulação de dados

--- a/projeto02_investidores.html
+++ b/projeto02_investidores.html
@@ -99,12 +99,13 @@ MAIN
 			</p>
 			<img src="images\projetos\02_06.png">
 			<div>
-				<h2>Tratamento e manipulação de dados e análise exploratória</h2>
+				<h2>Manipulação de dados e análise exploratória</h2>
 			</div>
 			<br>
 			<p>
-				
+				Descrição das variáveis numéricas:
 			</p>
+			<img src="images\projetos\02_07.png">
 		</article>
 	</div>
 </div>
